# Face-Verification-with-FHE

./: Face_Recognition_with_FaceNet_and_tenSEAL.ipynb  Face_Verification_with_FHE.ipynb  README.md
app/: app.py  pyproject.toml
app/gui/: gui.py
